   exposed by UI yet, but admins can use it in eg. zopectl debug.

 * Member profile now has a "contact" button which links to a mail
   form. The member's email address is not exposed. (slinkp, rafrombrc)

 * We now use the member's full name in most places that conceptually
   refer to a person, and the member's ID only in places that refer to
   the account. Fixes openplans:#2740 (slinkp)

Bug fixes:

 * Fix a longstanding point of user confusion, openplans:#1474. The member
   search in team management view no longer ignores existing team members
   but instead displays them with a contextual note that they are already
   in the project. (egj)

 * Account creation forms no longer explode when the id contains '('
   or ')'. (egj)

 * "Delete" button on project contents page now is shown or hidden
   based on correct permission check. There is a GS upgradeStep to fix
   existing workflows. (rafrombrc)

 * The 'addable types' setting for the OpenTeam types was incorrect;
   it was set to all implicitly allowable types instead of explicitly
   allowing OpenMembership (and nothing else).  Edited the GS profile
   to reflect the new setting and added an upgradeStep to automate its
   application. (rafrombrc)


0.14.1 (2008/11/07)
===================

Data Migrations:

 * The migration needed for 0.14.0 has been rewritten to work as a
   standard GenericSetup upgrade.  You can now upgrade via the
   portal_setup tool in the ZMI; go to the upgrades tab and run the
   upgrade registered for version 0.14.0.

   (The script also still exists at migrations/update_member_project_ids.py 
   if you prefer to run it via zopectl.)

Features:

 * Added i18n for some wiki history views, if you can call that a feature.

Bug fixes:

 * List manager address was showing up as escaped HTML.
   (slinkp) (openplans:#2706)

 * Wiki version view doesn't error when no version_id is specified
   (slinkp) (http://trac.openplans.org/errors-openplans/ticket/30)
